# observer

./: .gitignore  .no-mistakes.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.claude/: settings.json
.claude/hooks/: observer-gate.sh
.claude/skills/observer-flow/: SKILL.md
.claude/skills/observer-kit/: SKILL.md
.github/workflows/: tests.yml
docs/: install-matrix.md
examples/: example_worker.py
examples/observer-flow-demo/: BATCH_EXPLAIN.md  EXPLAIN.md  README.md  batch_flow_coordinator.py  batch_pipeline.flow.json  batch_synthetic_data.py  flow_coordinator.py  pipeline.flow.json  synthetic_data.py  test_flow_coordinator.py
examples/observer-flow-demo/nodes/: __init__.py  batch_label_homepages.py  find_contact.py  inspect_profile.py  mark_out_of_scope.py  prepare_labelled_export.py  prepare_sheet.py  qualify_account.py  queue_review.py  scrape_homepage.py
observer_kit/: __init__.py  _util.py  axi.py  cli.py  gate.py  inventory.py  lint_emit.py  run_dashboard.py  runguard.py  watch_chat.py
skills/observer-flow/: SKILL.md  test_skill.py  test_validate_flow.py
skills/observer-flow/examples/: website-qualification.flow.json
skills/observer-flow/references/: flow-contract.md
skills/observer-flow/scripts/: validate_flow.py
skills/observer-kit/: BUILD-GUIDE.md  EXPLAIN.md  README.md  SKILL.md  example_worker.py  observer_hook.py  run_dashboard.py  runguard.py  test_cli.py  test_dashboard.py  test_dashboard_browser.py  test_data_movement.py  test_lint_emit.py  test_runguard.py  test_skill.py  watch_chat.py
skills/observer-kit/.runguard/: 2026-07-08-000000-sample-ledger.jsonl  chat.jsonl
skills/observer-kit/agents/: openai.yaml
skills/observer-kit/assets/: dashboard.js
skills/observer-kit/hooks/: session-start-observer.sh
skills/observer-kit/references/: build-guide.md  lint_emit.py  pattern.md
tests/: test_agent_acceptance.py  test_axi.py  test_cli.py  test_dashboard.py  test_data_movement.py  test_flow_skill.py  test_gate.py  test_lint_emit.py  test_runguard.py  test_secrets.py  test_skill.py  test_validate_flow.py
